--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,8 @@ futures-util = "0.3"
 
 # 3. 数据处理 (JSON)
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+serde_json = { version = "1.0", features = ["raw_value"] }
+
 
 # 4. 配置读取
 dotenv = "0.15"
