--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,4 +39,4 @@ async-http-proxy = { version = "1.2", features = ["runtime-tokio"] }
 native-tls = "0.2"
 tokio-native-tls = "0.3"
 
-
+colored = "2.0"
